# dc-lead-generator

./: .replit  CODEBASE_AUDIT_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  README.md  config.yaml  dynamic_campus_clients.json  email_automation.py  feed_tester.py  higher_ed_jobs.json  higher_ed_leads.json  job_service.py  lead_generation_service.py  log.txt  main.py  news_fetcher.py  news_fetcher_improved.py  news_service.py  pyproject.toml  rss_health_monitor.py  scheduled_main.py  send_upgraded_lead.py  source_cross_reference.py  source_logger.py  sources_config.json  test_source_upgrades.py
attached_assets/: Pasted--AI-Agent-Higher-Ed-Lead-Generation-System-Objective-Identify-and-deliver-genuine--1749821136103_1749821136104.txt  Pasted--PROJECT-UPDATE-ENGAGEMENT-TIER-LOGIC-CONTACT-ENRICHMENT-I-m-refining-a-higher-ed-lead-gener-1749829595165_1749829595166.txt  Pasted-Hello-I-need-your-help-refactoring-an-existing-Python-script-lead-generation-service-py-The-goal--1749911113278_1749911113279.txt  Pasted-PROJECT-CONTEXT-You-re-maintaining-and-expanding-an-AI-powered-Python-application-that-1-Pu-1749820535454_1749820535456.txt  content-1749911078529.md  refactor_1749911252829.txt  refactor_2_1749911592208.txt  source_intake_improvements_prompt_1749835780011.txt  source_intake_upgrade_prompt_1749835090759.txt
