[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.12",
    "aiohttp-retry>=2.9.1",
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "markdown>=3.8",
    "newspaper3k>=0.2.8",
    "openai>=1.86.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "trafilatura>=2.0.0",
]
